--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"GLASS"</title>
 </head>
-<circle>
+<circle class="circle">
 
 </circle>
 <div class="splash">
-    <h1 class="fade-in">Glass</h1>
+    <h1 class="fade-in">This is GLASSMORPHISM</h1>
 </div>
 <body>
     <div class="container">
         <div class="card">
             <div class="content">
                 <h2>001</h2>
-                <h3>"Off-White"</h3>
+                <h3>"Welcome"</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing
                      elit. Autem ab architecto tempora
                       facilis libero sapiente.</p>
@@ -33,7 +33,7 @@
         <div class="card">
             <div class="content">
                 <h2>002</h2>
-                <h3>"Midnight Black"</h3>
+                <h3>"To"</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Autem ab architecto tempora
                      facilis libero sapiente.</p>
@@ -44,13 +44,46 @@
         <div class="card">
             <div class="content">
                 <h2>003</h2>
-                <h3>"Amethyst"</h3>
+                <h3>"The"</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Autem ab architecto tempora
                      facilis libero sapiente.</p>
                 <a href="#">"Learn More"</a>       
             </div>
             <h2 class="front">003</h2>
+        </div>
+        <div class="card">
+            <div class="content">
+                <h2>004</h2>
+                <h3>"Gates"</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Autem ab architecto tempora
+                     facilis libero sapiente.</p>
+                <a href="#">"Learn More"</a>       
+            </div>
+            <h2 class="front">004</h2>
+        </div>
+        <div class="card">
+            <div class="content">
+                <h2>005</h2>
+                <h3>"Of"</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Autem ab architecto tempora
+                     facilis libero sapiente.</p>
+                <a href="#">"Learn More"</a>       
+            </div>
+            <h2 class="front">005</h2>
+        </div>
+        <div class="card">
+            <div class="content">
+                <h2>006</h2>
+                <h3>"Heaven"</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Autem ab architecto tempora
+                     facilis libero sapiente.</p>
+                <a href="#">"Learn More"</a>       
+            </div>
+            <h2 class="front">006</h2>
         </div>
     </div>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
@@ -69,5 +102,7 @@
             
         });
     </script>
+    <! ------------------------------- >
+
 </body>
 </html>
