--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Autem ab architecto tempora
                      facilis libero sapiente.</p>
-                <a href="#">"Learn More"</a>       
+                <a href="#">"Enter"</a>       
             </div>
             <h2 class="front">006</h2>
         </div>
